--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -385,6 +385,17 @@
       "mobile": "您可以使用移动浏览器，如 {coinbase_link} 或 {imtoken_link}。"
     }
   },
+  "terms_modal": {
+    "also_agree":
+      "您还同意我们的{privacy_policy_link}，它描述了我们如何处理您的信息。",
+    "by_agreeing":
+      "通过选择下面的“我同意”，即表示您同意我们的{terms_of_service_link}。",
+    "explanation": "这个dApp与在以太坊区块链上运行的分散交换进行交互。",
+    "i_agree": "我同意",
+    "privacy_policy": "隐私政策",
+    "terms_of_service": "服务条款",
+    "title": "欢迎来到Decentraland的LAND市场"
+  },
   "transaction": {
     "buy": "您购买了 {parcel_link} 地块",
     "buy_mana": "您已经买了 {mana} MANA",
