--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -400,6 +400,18 @@
         "{coinbase_link}や{imtoken_link}などのモバイルブラウザも使用することができます。"
     }
   },
+  "terms_modal": {
+    "also_agree":
+      "また、お客様の情報をどのように処理するのかについて記述している{privacy_policy_link}に同意するものとします。",
+    "by_agreeing":
+      "下記の \"同意する\"を選択することにより、私たちの{terms_of_service_link}に同意したことになります。",
+    "explanation":
+      "このdAppは、Ethereumブロックチェーン上で実行される分散型エクスチェンジと相互作用します。",
+    "i_agree": "同意する",
+    "privacy_policy": "個人情報保護方針",
+    "terms_of_service": "利用規約",
+    "title": "DecentralandのLANDマーケットプレイスへようこそ"
+  },
   "transaction": {
     "buy": "{parcel_link}を購入しました。",
     "buy_mana": "{mana} MANAを購入しました。",
