--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -102,6 +102,16 @@
     "your_estate": "Your estate",
     "your_parcel": "Your parcel"
   },
+  "auction_modal": {
+    "authorize_contract": "Authorize contract",
+    "authorized_explanation":
+      "You're all set to begin! If you need more information on how to use the auction, you can read the {blog_post_link}.",
+    "blog_post": "Blog post",
+    "first_time_explanation":
+      "To participate in this new auction, you'll need to authorize the new {contract_link} contract. You can read all about it on the {blog_post_link}.",
+    "lets_go": "Lets go!",
+    "title": "Decentraland Auction"
+  },
   "auction_page": {
     "bid": "Bid",
     "description": "Select LAND to buy",
