--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -22,8 +22,7 @@
     "didnt_allow_new_marketplace": "您尚未授权新版本的 Marketplace 使用 MANA",
     "needs_at_least": "为了购买{asset_type}，您至少需要 {mana} MANA。",
     "please_allow": "请转到{settings_link} 并允许 LegacyMarketplace 使用 MANA",
-    "please_allow_new_marketplace":
-      "请转到{settings_link}并允许 Marketplace 使用 MANA",
+    "please_allow_new_marketplace": "请到 {settings_link} 并允许 Marketplace 使用 MANA",
     "total_balance": "您的余额是 {balance}"
   },
   "asset_cancel": {
@@ -78,13 +77,12 @@
     "expiration": "期限",
     "expiration_placeholder": "出售的截止日期",
     "list_asset": "出售 {asset_name}",
-    "please_authorize":
-      "您需要转到{settings_link}并授权市场使用 {asset_name}，然后才能出售。",
+    "please_authorize": "您需要到 {settings_link} 并授权市场使用 {asset_name}，然后才能出售。",
     "price": "价格",
     "price_placeholder": "{asset_name}的 MANA 价格",
-    "set_asset_price": "设置{asset_name}的价格和到期日期。",
-    "set_new_asset_price": "设置{asset_name}的新价格或到期日期。",
-    "update_asset": "更新{asset_name}发布"
+    "set_asset_price": "设置 {asset_name} 的价格和到期日期。",
+    "set_new_asset_price": "设置 {asset_name} 的新价格或到期日期。",
+    "update_asset": "更新 {asset_name} 发布"
   },
   "atlas": {
     "loading": "载入中",
@@ -96,12 +94,12 @@
     "your_parcel": "您的地块"
   },
   "authorization": {
-    "allow": "授权{contract_link}使用{symbol}",
-    "allowed": "您授权{contract_link}使用{symbol}",
-    "approve": "授权{contract_link}使用{symbol}",
-    "approved": "您授权{contract_link}使用{symbol}",
-    "disallowed": "您未授权{contract_link}使用{symbol}",
-    "disapproved": "您未授权{contract_link}使用{symbol}"
+    "allow": "授权 {contract_link} 使用 {symbol}",
+    "allowed": "您授权 {contract_link} 使用 {symbol}",
+    "approve": "授权 {contract_link} 使用 {symbol}",
+    "approved": "您授权 {contract_link} 使用 {symbol}",
+    "disallowed": "您未授权 {contract_link} 使用 {symbol}",
+    "disapproved": "您未授权 {contract_link} 使用 {symbol}"
   },
   "buy_mana": {
     "action": "购买",
@@ -132,23 +130,20 @@
     "proposal": "提案"
   },
   "derivation_path": {
-    "invalid":
-      "您为钱包设置了错误的派生路径。 您的派生路径必须遵循模式 44'/60|61'/x'/n"
+    "invalid": "您为钱包设置了错误的派生路径。 您的派生路径必须遵循模式 44'/60|61'/x'/n"
   },
   "estate_detail": {
     "dissolve": "解散连块土地",
     "dissolve_desc": "你将解散连块土地 {name}",
     "edit_parcels": "编辑地块",
     "empty_estate": "连块土地 {name} 已经解散",
-    "maximum_parcels_message":
-      "如果您在单个交易中添加或删除超过 {max} 个地块，交易费用可能会不足。您可以先提交此交易，然后在编辑连块土地中再增加或删除地块。",
+    "maximum_parcels_message": "如果您在单个交易中添加或删除超过 {max} 个地块，交易费用可能会不足。您可以先提交此交易，然后在编辑连块土地中再增加或删除地块。",
     "maximum_parcels_title": "您达到了每笔交易的最大土地数",
     "parcels": "包含的地块"
   },
   "estate_dissolve": {
     "too_big": "连块土地太大了",
-    "too_big_desc":
-      "如果连块土地超过 {max} 块土地，则解散连块土地的交易有可能引起交易费用不足。您可以在编辑连块土地中移除地块，直到地块少于或等于 {max}， 然后再解散连块土地"
+    "too_big_desc": "如果连块土地超过 {max} 块土地，则解散连块土地的交易有可能引起交易费用不足。您可以在编辑连块土地中移除地块，直到地块少于或等于 {max}， 然后再解散连块土地"
   },
   "estate_edit": {
     "description": "描述",
@@ -199,8 +194,8 @@
     "for": "对于",
     "loading": "载入中",
     "marketplace": "虚拟物品市场",
-    "mortgage": "抵押",
-    "mortgages": "抵押",
+    "mortgage": "抵押贷款",
+    "mortgages": "抵押贷款",
     "own_address_warning": "那是您自己的地址！",
     "owned_by": "土地所有人：",
     "owned_by_link": "由 {address_link} 所有",
@@ -281,20 +276,17 @@
     "oracle": "Oracle 合同地址",
     "outstanding_amount": "杰出的金额",
     "partial_payment": "部分付款",
-    "partial_payment_desc": "您即将支付部分抵押贷款购买土地{parcel_name}",
+    "partial_payment_desc": "您即将支付部分抵押贷款购买土地 {parcel_name}",
     "pay": "工资",
     "payable": "应付",
     "payable_placeholder": "应付天数",
     "pending_tx": "抵押",
-    "please_authorize_MANA":
-      "请转到{settings_link}并授权Mortgage Helper合同代表您运营MANA",
-    "please_authorize_RCN":
-      "请转到{settings_link}并授权抵押贷款经理合同代表您运营RCN",
+    "please_authorize_MANA": "请到 {settings_link} 并授权 Mortgage Helper 合约代表您运营 MANA",
+    "please_authorize_RCN": "请到 {settings_link} 并授权抵押贷款合约代表您运营 RCN",
     "punitory_rate": "惩罚性利率",
     "punitory_rate_placeholder": "惩罚性利率",
-    "request": "申请抵押",
-    "request_land":
-      "您将为 {parcel_name} 地块以 {parcel_price} 的价格申请抵押贷款",
+    "request": "申请抵押贷款",
+    "request_land": "您将为 {parcel_name} 地块以 {parcel_price} 的价格申请抵押贷款",
     "requested": "已申请",
     "required_deposit": "所需押金：{deposit}"
   },
@@ -318,7 +310,7 @@
       "part_of": "{name} 的一部分"
     },
     "publication": {
-      "mortgage": "请求抵押"
+      "mortgage": "申请抵押贷款"
     },
     "tags": {
       "title": "着重说明"
@@ -355,8 +347,8 @@
     "for_buying": "购买",
     "for_buying_LegacyMarketplace": "使用 MANA（遗留功能）",
     "for_buying_Marketplace": "使用 MANA",
-    "for_buying_MortgageHelper": "LAND按抵押贷款",
-    "for_buying_MortgageManager": "LAND按抵押贷款",
+    "for_buying_MortgageHelper": "LAND 抵押贷款",
+    "for_buying_MortgageManager": "LAND 抵押贷款",
     "for_selling": "出售",
     "legacy_authorization": "遗留功能授权",
     "pending_tx": "等待交易完成，请点击查看详情"
@@ -366,8 +358,7 @@
     "get_started": "开始使用",
     "intro": "首先，您需要一个安全的地方来保存所有的 LAND。",
     "options": {
-      "desktop":
-        "您可以使用{metamask_link}扩展或像{ledger_nano_link}这样的硬件钱包。",
+      "desktop": "您可以使用{metamask_link}扩展或像{ledger_nano_link}这样的硬件钱包。",
       "mobile": "您可以使用移动浏览器，如 {coinbase_link} 或 {imtoken_link}。"
     }
   },
@@ -381,8 +372,7 @@
     "create_mortgage": "您要求抵押以购买地块 {parcel_link}",
     "dissolve_estate": "你解散了连块土地 {name}",
     "edit": "您编辑了{parcel_link}地块的名称\"{name}\"和描述\"{description}\"",
-    "edit_estate_metadata":
-      "您编辑了连块土地 {estate_id}，名称为“{name}”，描述为“{description}”",
+    "edit_estate_metadata": "您编辑了连块土地 {estate_id}，名称为“{name}”，描述为“{description}”",
     "edit_estate_parcels_added": "您将 {amount} 地块添加到连块土地 {name}",
     "edit_estate_parcels_removed": "您从连块土地 {name} 中移除了 {amount} 地块",
     "manage": "您授权{address_link}更新{asset_link}上的内容",
@@ -403,8 +393,7 @@
       "please_confirm": "请确认交易"
     },
     "parcel": {
-      "still_pending":
-        "{parcel_name} 仍然有 {transactions_count} 个待处理的交易。"
+      "still_pending": "{parcel_name} 仍然有 {transactions_count} 个待处理的交易。"
     },
     "see_activity": "要查看您的交易记录，请访问 {activity_link}。",
     "text": {
