--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -104,7 +104,7 @@
     "your_parcel": "Tu parcela"
   },
   "auction_page": {
-    "description": "Seleccione parcelas para comprar",
+    "description": "Seleccione LANDs para comprar",
     "maximum_parcels_message":
       "Si intenta comprar más de {max} parcelas en una sola transacción, puede quedarse sin gas. ",
     "maximum_parcels_title":
@@ -384,9 +384,9 @@
     "authorization_error_contact":
       "Si el error persiste no dudes en contactar con nosotros.",
     "for_buying": "Por comprar",
-    "for_buying_LANDAuction": "Paquetes de subasta usando MANA",
-    "for_buying_LegacyMarketplace": "Activos utilizando MANA (legado)",
-    "for_buying_Marketplace": "Activos utilizando MANA",
+    "for_buying_LANDAuction": "LAND subastado usando MANA",
+    "for_buying_LegacyMarketplace": "ERC721s usando \"nt\" 2 (legado)",
+    "for_buying_Marketplace": "ERC721s utilizando MANA",
     "for_buying_MortgageHelper": "LAND por hipoteca",
     "for_buying_MortgageManager": "LAND por hipoteca",
     "for_selling": "Para la venta de",
