--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -103,7 +103,7 @@
     "your_parcel": "당신의 토지"
   },
   "auction_page": {
-    "description": "구입할 소포 선택",
+    "description": "구매할 LANDs 선택",
     "maximum_parcels_message":
       "단일 거래에서 {max} 소포를 초과하여 구매하려고하면 가스가 고갈 될 수 있습니다. ",
     "maximum_parcels_title": "거래 당 최대 소포에 도달했습니다.",
@@ -378,9 +378,9 @@
     "authorization_error_contact":
       "오류가 지속되면 언제든지 Google에 문의하십시오.",
     "for_buying": "구매를 위해",
-    "for_buying_LANDAuction": "MANA를 사용하여 경매 필",
-    "for_buying_LegacyMarketplace": "MANA (기존)를 사용하는 애셋",
-    "for_buying_Marketplace": "MANA를 사용하는 저작물",
+    "for_buying_LANDAuction": "MANA를 사용하여 경매 된 LAND",
+    "for_buying_LegacyMarketplace": "MANA (레거시)를 사용하는 ERC721",
+    "for_buying_Marketplace": "MANA를 사용하는 ERC721s",
     "for_buying_MortgageHelper": "모기지의 LAND",
     "for_buying_MortgageManager": "모기지의 LAND",
     "for_selling": "판매용",
