--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -105,7 +105,7 @@
   "auction_page": {
     "description": "Select LANDs to buy",
     "maximum_parcels_message":
-      "If you try to buy more than {max} parcels in a single transaction it may run out of gas. You can submit this transaction and then buy more parcels in a subsequent transaction.",
+      "If you try to buy more than {max} parcels in a single transaction it'll fail. You must submit this transaction and then buy more parcels in a subsequent transaction.",
     "maximum_parcels_title": "You reached the maximum parcels per transaction",
     "title": "Buy unowned parcels"
   },
