--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -105,7 +105,7 @@
   "auction_page": {
     "description": "구매할 LANDs 선택",
     "maximum_parcels_message":
-      "단일 거래에서 {max} 소포를 초과하여 구매하려고하면 가스가 고갈 될 수 있습니다. ",
+      "단일 트랜잭션에서 {max} 소포를 초과하여 구매하려고하면 실패합니다. ",
     "maximum_parcels_title": "거래 당 최대 소포에 도달했습니다.",
     "title": "소유되지 않은 소포 구입"
   },
