--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -383,8 +383,8 @@
       "If the error persist don't hesitate to contact us",
     "for_buying": "For buying",
     "for_buying_LANDAuction": "Auctioned LAND using MANA",
-    "for_buying_LegacyMarketplace": "ERC721s using MANA (legacy)",
-    "for_buying_Marketplace": "ERC721s using MANA",
+    "for_buying_LegacyMarketplace": "Assets using MANA (legacy)",
+    "for_buying_Marketplace": "Assets using MANA",
     "for_buying_MortgageHelper": "LAND by Mortgage",
     "for_buying_MortgageManager": "LAND by Mortgage",
     "for_selling": "For selling",
