--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -385,7 +385,7 @@
       "Si el error persiste no dudes en contactar con nosotros.",
     "for_buying": "Por comprar",
     "for_buying_LANDAuction": "LAND subastado usando MANA",
-    "for_buying_LegacyMarketplace": "ERC721s usando \"nt\" 2 (legado)",
+    "for_buying_LegacyMarketplace": "ERC721s usando MANA (legado)",
     "for_buying_Marketplace": "ERC721s utilizando MANA",
     "for_buying_MortgageHelper": "LAND por hipoteca",
     "for_buying_MortgageManager": "LAND por hipoteca",
