--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -103,7 +103,7 @@
     "your_parcel": "당신의 토지"
   },
   "auction_page": {
-    "description": "구매할 LANDs 선택",
+    "description": "구매할 LAND 선택",
     "maximum_parcels_message":
       "단일 트랜잭션에서 {max} 소포를 초과하여 구매하려고하면 실패합니다. ",
     "maximum_parcels_title": "거래 당 최대 소포에 도달했습니다.",
