--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -94,7 +94,7 @@
     "your_parcel": "您的地块"
   },
   "auction_page": {
-    "description": "选择LANDs购买",
+    "description": "选择LAND购买",
     "maximum_parcels_message":
       "如果您尝试在单笔交易中购买超过{max}的包裹，那么它将失败。",
     "maximum_parcels_title": "您达到了每笔交易的最大包裹数",
