--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -103,6 +103,14 @@
     "your_estate": "Su propiedad",
     "your_parcel": "Tu parcela"
   },
+  "auction_page": {
+    "description": "Seleccione LAND para comprar",
+    "maximum_parcels_message":
+      "Si intenta comprar más de {max} parcelas en una sola transacción, fallará. ",
+    "maximum_parcels_title":
+      "Has alcanzado el máximo de parcelas por transacción.",
+    "title": "Comprar parcelas sin dueño"
+  },
   "authorization": {
     "allow": "Autorice al {contract_link} a operar {symbol} en su nombre",
     "allowed":
@@ -189,6 +197,7 @@
     "add": "añadir",
     "address_placeholder": "0x...",
     "atlas": "Atlas",
+    "auction": "Subasta",
     "balance": "Balance",
     "blog": "Blog",
     "cancel": "Cancelar",
@@ -375,8 +384,9 @@
     "authorization_error_contact":
       "Si el error persiste no dudes en contactar con nosotros.",
     "for_buying": "Por comprar",
-    "for_buying_LegacyMarketplace": "Activos utilizando MANA (legado)",
-    "for_buying_Marketplace": "Activos utilizando MANA",
+    "for_buying_LANDAuction": "LAND subastado usando MANA",
+    "for_buying_LegacyMarketplace": "ERC721s usando MANA (legado)",
+    "for_buying_Marketplace": "ERC721s utilizando MANA",
     "for_buying_MortgageHelper": "LAND por hipoteca",
     "for_buying_MortgageManager": "LAND por hipoteca",
     "for_selling": "Para la venta de",
