--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -93,6 +93,13 @@
     "your_estate": "您的连块土地",
     "your_parcel": "您的地块"
   },
+  "auction_page": {
+    "description": "选择LAND购买",
+    "maximum_parcels_message":
+      "如果您尝试在单笔交易中购买超过{max}的包裹，那么它将失败。",
+    "maximum_parcels_title": "您达到了每笔交易的最大包裹数",
+    "title": "购买无主的包裹"
+  },
   "authorization": {
     "allow": "授权 {contract_link} 使用 {symbol}",
     "allowed": "您授权 {contract_link} 使用 {symbol}",
@@ -171,6 +178,7 @@
     "add": "加",
     "address_placeholder": "0x...",
     "atlas": "地图",
+    "auction": "拍卖",
     "balance": "余额",
     "blog": "博客",
     "cancel": "取消",
@@ -345,6 +353,7 @@
     "authorization_error": "我们无法加载您的授权，请重试",
     "authorization_error_contact": "如果错误仍然存​​在，请不要犹豫与我们联系",
     "for_buying": "购买",
+    "for_buying_LANDAuction": "使用MANA拍卖LAND",
     "for_buying_LegacyMarketplace": "使用 MANA（遗留功能）",
     "for_buying_Marketplace": "使用 MANA",
     "for_buying_MortgageHelper": "LAND 抵押贷款",
